--- a/css/stylos.css
+++ b/css/stylos.css
@@ -310,7 +310,7 @@ header>.container {
 /* section 2 */
 
 .benefits {
-  padding: 120px 0 120px
+  padding: 120px 0 120px;
 }
 
 .benefits-title {
@@ -324,9 +324,38 @@ header>.container {
 }
 
 .benefit-item {
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .portfolio-title-foto {
   margin-bottom: 8px;
+}
+
+/* section 3 */
+
+.our-team-title {
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-member {
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.name-position {
+  padding: 32px 0;
+}
+
+.portfolio-title-foto {
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.portfolio-text-foto {
+  text-align: center;
 }
