--- a/css/stylos.css
+++ b/css/stylos.css
@@ -333,7 +333,7 @@ header>.container {
 }
 
 .benefit-item {
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .portfolio-title-foto {
@@ -356,7 +356,7 @@ header>.container {
 }
 
 .team-member {
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -371,4 +371,35 @@ header>.container {
 
 .portfolio-text-foto {
   text-align: center;
+}
+
+/* section 4 */
+
+.portfolio-section {
+  padding: 120px 0 120px 0;
+}
+
+.portfolio-title {
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.name-category {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio-title-foto {
+  margin-bottom: 8px;
 }
