--- a/css/stylos.css
+++ b/css/stylos.css
@@ -333,7 +333,7 @@ header>.container {
 }
 
 .benefit-item {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 
 .portfolio-title-foto {
@@ -356,7 +356,7 @@ header>.container {
 }
 
 .team-member {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 
