--- a/css/stylos.css
+++ b/css/stylos.css
@@ -330,12 +330,12 @@ header>.container {
 .benefits-list {
   display: flex;
   gap: 24px;
+  width: calc((100% - 72px) / 4);
+
 
 }
 
-.benefit-item {
-  width: calc((100% - 72px) /4);
-}
+.benefit-item {}
 
 .portfolio-title-foto {
   margin-bottom: 8px;
@@ -354,10 +354,11 @@ header>.container {
 .team-list {
   display: flex;
   gap: 24px;
+  width: calc((100% - 72px) /4);
 }
 
 .team-member {
-  width: calc((100% - 72px) /4);
+
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -389,11 +390,10 @@ header>.container {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-}
-
-.portfolio-item {
   width: calc((100% - 48px) /3);
 }
+
+.portfolio-item {}
 
 .name-category {
   padding: 32px 16px;
