--- a/css/stylos.css
+++ b/css/stylos.css
@@ -330,12 +330,12 @@ header>.container {
 .benefits-list {
   display: flex;
   gap: 24px;
-  width: calc((100% - 72px) / 4);
-
-
+  padding-left: 0;
 }
 
-.benefit-item {}
+.benefit-item {
+  width: calc((100% - 72px) / 4);
+}
 
 .portfolio-title-foto {
   margin-bottom: 8px;
@@ -354,11 +354,12 @@ header>.container {
 .team-list {
   display: flex;
   gap: 24px;
-  width: calc((100% - 72px) /4);
+  padding-left: 0;
+
 }
 
 .team-member {
-
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -390,10 +391,13 @@ header>.container {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  width: calc((100% - 48px) /3);
+  padding-left: 0;
+
 }
 
-.portfolio-item {}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
 
 .name-category {
   padding: 32px 16px;
