--- a/css/stylos.css
+++ b/css/stylos.css
@@ -331,6 +331,7 @@ header>.container {
   display: flex;
   gap: 24px;
   padding-left: 0;
+  margin: 0;
 }
 
 .benefit-item {
@@ -355,6 +356,7 @@ header>.container {
   display: flex;
   gap: 24px;
   padding-left: 0;
+  margin: 0;
 
 }
 
@@ -392,6 +394,7 @@ header>.container {
   column-gap: 24px;
   row-gap: 48px;
   padding-left: 0;
+  margin: 0;
 
 }
 
