--- a/css/stylos.css
+++ b/css/stylos.css
@@ -182,7 +182,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  text-align: left;
+  text-align: center;
 }
 
 .portfolio-text-foto {
@@ -194,7 +194,7 @@ body {
   line-height: 1.50;
   letter-spacing: 0.02em;
   color: #434455;
-  text-align: left;
+  text-align: center;
 }
 
 /* Футер */
@@ -355,11 +355,11 @@ header>.container {
 .portfolio-title-foto {
   margin-bottom: 8px;
   padding-left: 0;
-  margin: 0;
+
 }
 
 .portfolio-text-foto {
-  text-align: left;
+
   padding-left: 0;
   margin: 0;
 }
@@ -407,9 +407,8 @@ header>.container {
 }
 
 .portfolio-title {
-  margin-bottom: 72px;
   padding-left: 0;
-  margin: 0;
+  margin: 0 auto 72px auto;
 }
 
 .portfolio-list {
@@ -436,13 +435,13 @@ header>.container {
   margin-bottom: 8px;
   padding-left: 0;
   margin: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .portfolio-text-foto {
   padding-left: 0;
   margin: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .end-page {
@@ -451,9 +450,9 @@ header>.container {
 
 .logo-web {
   display: inline-block;
-  margin-bottom: 16px;
+
   padding-left: 0;
-  margin: 0;
+  margin: 0 0 16px 0;
 }
 
 .end-page-text {
