--- a/css/stylos.css
+++ b/css/stylos.css
@@ -434,7 +434,7 @@ header>.container {
 .portfolio-title-foto {
   margin-bottom: 8px;
   padding-left: 0;
-  margin: 0;
+  margin: 0 0 8px 0;
   text-align: center;
 }
 
