--- a/css/stylos.css
+++ b/css/stylos.css
@@ -243,11 +243,21 @@ body {
 
 /* margin 0 padding 0 */
 
-ul,
+h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -299,9 +309,9 @@ header>.container {
 }
 
 .contacts {
-  margin: 0;
+  margin: 0 auto;
   align-items: center;
-  padding: 0;
+  padding-left: 0 auto;
 
 }
 
