--- a/css/stylos.css
+++ b/css/stylos.css
@@ -291,6 +291,8 @@ header>.container {
 
 .top-line {
   display: flex;
+  padding-left: 0;
+  margin: 0;
 
 }
 
@@ -313,7 +315,7 @@ header>.container {
 .contacts-list {
   display: block;
   gap: 40px;
-  padding: 24;
+  margin: 24;
 }
 
 /* section 1*/
