--- a/css/stylos.css
+++ b/css/stylos.css
@@ -250,15 +250,14 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 auto;
+  padding: 0 auto;
 }
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  margin: 0 auto;
+  padding: 0 auto;
 }
 
 /* header */
