--- a/css/stylos.css
+++ b/css/stylos.css
@@ -255,9 +255,14 @@ p {
 
 ul,
 ol {
+  list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 img {
@@ -294,9 +299,8 @@ header>.container {
 
 .nav-list {
   display: flex;
+  align-items: center;
   gap: 40px;
-  padding-left: 0;
-  margin: 0;
 }
 
 .item {
@@ -310,10 +314,14 @@ header>.container {
 
 .contacts-list {
   gap: 40px;
-  margin: 24px;
   margin-left: auto;
   align-items: center;
 
+}
+
+.contacts-email {
+  padding: 24px 0;
+  display: block;
 }
 
 /* section 1*/
@@ -323,7 +331,7 @@ header>.container {
 
 .prime-text {
   max-width: 496px;
-  margin-bottom: 48px;
+  margin-bottom: 0 auto;
 }
 
 .prime-button {
@@ -335,12 +343,13 @@ header>.container {
   border-radius: 4px;
   cursor: pointer;
   margin: 0 auto;
+  margin-top: 48px;
 }
 
 /* section 2 */
 
 .benefits {
-  padding: 120px 0 120px;
+  padding: 120px 0 120px 0;
 }
 
 .visually-hidden {
@@ -360,8 +369,6 @@ header>.container {
 .benefits-list {
   display: flex;
   gap: 24px;
-  padding-left: 0;
-  margin: 0;
 }
 
 .benefit-item {
@@ -377,15 +384,9 @@ header>.container {
 
 .portfolio-title-foto {
   margin-bottom: 8px;
-  padding-left: 0;
 
 }
 
-.portfolio-text-foto {
-
-  padding-left: 0;
-  margin: 0;
-}
 
 /* section 3 */
 
